backend, frontend: support pagination on searches
